--- a/package.json
+++ b/package.json
@@ -4,21 +4,24 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "node src/scripts/getPosts.js && vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-markdown": "^9.0.0",
+    "react-remark": "^2.1.0",
     "react-router-dom": "^6.16.0",
     "react-spinners": "^0.13.8",
     "react-type-animation": "^3.1.0",
+    "rehype-highlight": "^7.0.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
